--- a/app/templates/app/realizar_venta.html
+++ b/app/templates/app/realizar_venta.html
@@ -7,7 +7,21 @@
     <title>Ventas</title>
 </head>
 <body>
+<!--Esto es un Menú-->
 
+<ul class="nav nav-pills">
+    <li role="presentation" class="active"><a href="/home">Inicio</a></li>
+    <li role="presentation"><a href="/agregar_producto">Agregar Productos</a></li>
+    <li role="presentation"><a href="/listar_producto">Ver stock</a></li>
+    <li role="presentation"><a href="/busqueda_producto">Buscar en el stock</a></li>
+    <li role="presentation"><a href="/agregar_usuario">Agregar Usuario</a></li>
+    <li role="presentation"><a href="/listar_usuario">Ver usuarios</a></li>
+    <li role="presentation"><a href="/realizar_venta">Cargar venta</a></li>
+    <li role="presentation"><a href="/listar_ventas">Historial de Ventas</a></li>
+  </ul>
+  
+  <!--Esto es un contenido-->
+  
 {% if realizar_venta.errors %}
 <p style="color:red;"> Están mal los datos, revisar</p>
 {% endif %}
