--- a/app/templates/app/listado_producto.html
+++ b/app/templates/app/listado_producto.html
@@ -7,6 +7,20 @@
     <title>Listado de productos</title>
 </head>
 <body>
+<!--Esto es un Menú-->
+
+<ul class="nav nav-pills">
+    <li role="presentation" class="active"><a href="/home">Inicio</a></li>
+    <li role="presentation"><a href="/agregar_producto">Agregar Productos</a></li>
+    <li role="presentation"><a href="/listar_producto">Ver stock</a></li>
+    <li role="presentation"><a href="/busqueda_producto">Buscar en el stock</a></li>
+    <li role="presentation"><a href="/agregar_usuario">Agregar Usuario</a></li>
+    <li role="presentation"><a href="/listar_usuario">Ver usuarios</a></li>
+    <li role="presentation"><a href="/realizar_venta">Cargar venta</a></li>
+    <li role="presentation"><a href="/listar_ventas">Historial de Ventas</a></li>
+  </ul>
+  
+  <!--Esto es un contenido-->
     <ul> {% csrf_token %}
         {% for producto in producto %}
             <li>Producto: {{producto.nombre_producto}}, Cantidad disponible: {{producto.cantidad_disponible}}</li>
@@ -14,3 +28,4 @@
     </ul>  
 </body>
 </html>
+
