--- a/app/templates/app/listado_producto.html
+++ b/app/templates/app/listado_producto.html
@@ -1,31 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listado de productos</title>
-</head>
-<body>
-<!--Esto es un Menú-->
+{% extends "app/base.html" %}
 
-<ul class="nav nav-pills">
-    <li role="presentation" class="active"><a href="/home">Inicio</a></li>
-    <li role="presentation"><a href="/agregar_producto">Agregar Productos</a></li>
-    <li role="presentation"><a href="/listar_producto">Ver stock</a></li>
-    <li role="presentation"><a href="/busqueda_producto">Buscar en el stock</a></li>
-    <li role="presentation"><a href="/agregar_usuario">Agregar Usuario</a></li>
-    <li role="presentation"><a href="/listar_usuario">Ver usuarios</a></li>
-    <li role="presentation"><a href="/realizar_venta">Cargar venta</a></li>
-    <li role="presentation"><a href="/listar_ventas">Historial de Ventas</a></li>
-  </ul>
-  
-  <!--Esto es un contenido-->
-    <ul> {% csrf_token %}
-        {% for producto in producto %}
-            <li>Producto: {{producto.nombre_producto}}, Cantidad disponible: {{producto.cantidad_disponible}}</li>
-        {% endfor %}
-    </ul>  
-</body>
-</html>
+{% block cuerpo %}
 
+<!--Esto es un contenido-->
+<ul> {% csrf_token %}
+    {% for producto in producto %}
+    <li>Producto: {{producto.nombre_producto}}, Cantidad disponible: {{producto.cantidad_disponible}}</li>
+    {% endfor %}
+</ul>  
+
+{% endblock %}
